add hero block and start news block on main

--- a/sass/_options.sass
+++ b/sass/_options.sass
@@ -1,4 +1,11 @@
 $main-color: #D9F1FF
+$second-color: #F0FAFF
+$text-color: #00264D
+$blue: #0089F2
+
+
+$anim500: all 0.5s ease-in-out
+
 $Montserrat: 'Montserrat', sans-serif
 
 $none: none
