--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,12 +1,18 @@
 header
     border-bottom: 4px solid rgba(0, 38, 77, 0.06)
+    margin: 0 0 40px
 
 .header-block
-    display: flex
-    padding: 32px
+    display: grid
+    grid-auto-flow: column
+    padding: 32px 0
+    justify-content: space-between
 
 .nav-list
-    display: flex
+    display: grid
+    grid-auto-columns: max-content
+    grid-auto-flow: column
+    width: 100%
     align-items: center
     gap: 40px
     
