--- a/style/index.css
+++ b/style/index.css
@@ -29,19 +29,26 @@ img {
 
 header {
   border-bottom: 4px solid rgba(0, 38, 77, 0.06);
+  margin: 0 0 40px;
 }
 
 .header-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 32px;
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+  padding: 32px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .nav-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  grid-auto-columns: -webkit-max-content;
+  grid-auto-columns: max-content;
+  grid-auto-flow: column;
+  width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -50,4 +57,77 @@ header {
 
 .nav-block__link {
   text-decoration: none;
+}
+
+.btn {
+  background: #F0FAFF;
+  border-radius: 56px;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 43px;
+  color: #00264D;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.btn__header {
+  padding: 0 24px;
+}
+
+.btn__hero {
+  padding: 0 87px;
+  text-decoration: none;
+  display: block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.btn:hover {
+  background: #0089F2;
+  color: #F0FAFF;
+}
+
+.hero {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 640px 1fr;
+      grid-template-columns: 640px 1fr;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 20px;
+  margin: 0 0 80px;
+}
+
+.hero-info {
+  padding: 30px 10px 30px 0;
+}
+
+.hero-info__text {
+  display: -ms-grid;
+  display: grid;
+  gap: 30px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: right;
+  text-transform: uppercase;
+  margin: 0 0 161px;
+  color: #00264D;
+}
+
+.hero-info__title {
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 98.6%;
+  letter-spacing: -0.02em;
+  margin: 0 0 92px;
+}
+
+.hero-info__title h1 {
+  font-weight: inherit;
+  font-size: inherit;
 }
