finish news-block, start block video

--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -4,6 +4,7 @@
     border: none
     cursor: pointer
     
+    
 
     font-weight: 600
     font-size: 16px
@@ -13,11 +14,20 @@
 
     &__header
         padding: 0 24px
+        display: block
+        text-decoration: none
     &__hero
         padding: 0 87px
         text-decoration: $none
         display: block
         width: fit-content
+    &__news
+        padding: 0 19px
+        display: block
+        text-decoration: none
+        width: fit-content
+        font-size: 14px
+        font-weight: 400
     &:hover
         background: $blue
         color: $second-color
