--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -26,3 +26,57 @@
             h1
                 font-weight: inherit
                 font-size: inherit
+.last-news
+    margin: 0 0 85px
+    .section-title
+        margin: 0 0 20px
+
+    &__controls
+        display: flex
+        justify-content: space-between
+        margin: 0 0 27px
+
+    &__controls-btns
+        display: grid
+        grid-auto-flow: column
+        gap: 24px
+
+    &__prev, &__next
+        border-radius: 50%
+        border: none
+        cursor: pointer
+        background: transparent
+
+    // &__prev
+    //     background: linear-gradient(-90deg, #030E22 -0.52%, rgba(0, 88, 166, 0.33) 99.94%)
+    // &__next
+    //     background: linear-gradient(90deg, #030E22 0.93%, rgba(0, 88, 166, 0.33) 107.13%)
+
+    &__body
+        max-width: 213px
+        min-height: 234px
+
+.news-card
+    background: linear-gradient(179.89deg, rgba(0, 0, 0, 0) 0.1%, rgba(15, 18, 19, 0.85) 80.67%)
+    border-radius: 20px
+    width: 100%
+    min-height: 234px 
+    color: $white
+    position: relative
+    display: grid
+    place-content: end
+    padding: 22px 19px
+
+    &__img
+        border-radius: 20px
+        z-index: -1
+        position: absolute
+    
+    &__title
+        font-weight: 400
+        font-size: 24px
+        line-height: 120%
+    &__date
+        font-weight: 400    
+        font-size: 10px 
+        line-height: 120%
