finish main, start page sound

--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -80,3 +80,25 @@
         font-weight: 400    
         font-size: 10px 
         line-height: 120%
+.last-video
+    margin: 0 0 80px
+
+    .section-title
+        margin: 0 0 20px
+    &__body
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+        gap: 20px
+
+.socials-block
+    margin: 0 0 100px
+    .section-title
+        margin: 0 0 20px
+    &__body
+        display: flex
+        gap: 54px
+    &__text
+        max-width: 533px
+        font-weight: 500
+        font-size: 32px
+        line-height: 39px
