--- a/sass/index.sass
+++ b/sass/index.sass
@@ -22,9 +22,14 @@ img
     width: calc( 100% - 20px )
     margin: 0 auto
 
+.hide
+    display: none !important
+
 @import header
 @import button
 @import hero
+@import footer
+@import sounds
 
 
 .section-title
