--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -28,6 +28,22 @@
         width: fit-content
         font-size: 14px
         font-weight: 400
+    &__listen
+        padding: 0 55px
+
+    &__player
+        display: block
+        text-decoration: none
+        font-weight: 500
+        font-size: 20px
+        line-height: 24px
+        height: fit-content
+
+        &-dowload
+            padding: 0 140px
+            margin: 0 0 26px
+        &-text
+            padding: 0 53px
     &:hover
         background: $blue
         color: $second-color
