--- a/style/index.css
+++ b/style/index.css
@@ -27,6 +27,10 @@ img {
   margin: 0 auto;
 }
 
+.hide {
+  display: none !important;
+}
+
 header {
   border-bottom: 4px solid rgba(0, 38, 77, 0.06);
   margin: 0 0 40px;
@@ -96,6 +100,30 @@ header {
   width: fit-content;
   font-size: 14px;
   font-weight: 400;
+}
+
+.btn__listen {
+  padding: 0 55px;
+}
+
+.btn__player {
+  display: block;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.btn__player-dowload {
+  padding: 0 140px;
+  margin: 0 0 26px;
+}
+
+.btn__player-text {
+  padding: 0 53px;
 }
 
 .btn:hover {
@@ -211,6 +239,172 @@ header {
   font-weight: 400;
   font-size: 10px;
   line-height: 120%;
+}
+
+.last-video {
+  margin: 0 0 80px;
+}
+
+.last-video .section-title {
+  margin: 0 0 20px;
+}
+
+.last-video__body {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.socials-block {
+  margin: 0 0 100px;
+}
+
+.socials-block .section-title {
+  margin: 0 0 20px;
+}
+
+.socials-block__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 54px;
+}
+
+.socials-block__text {
+  max-width: 533px;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 39px;
+}
+
+.footer {
+  border-top: 4px solid rgba(0, 38, 77, 0.06);
+}
+
+.footer__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 26px 0;
+}
+
+.footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 58px;
+}
+
+.footer__copy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 11px;
+}
+
+.footer__copy-text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.footer__copy-text b {
+  margin: 7px 0 0;
+}
+
+.songs .section-title {
+  margin: 0 0 40px;
+}
+
+.songs-body {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(258px, 1fr))[4];
+      grid-template-columns: repeat(4, minmax(258px, 1fr));
+  gap: 20px 91px;
+}
+
+.songs-card {
+  border-radius: 16px 16px 0 0;
+  position: relative;
+}
+
+.songs-card__descr {
+  padding: 12px 32px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 137, 242, 0.4)), to(rgba(250, 250, 250, 0.08)));
+  background: linear-gradient(180deg, rgba(0, 137, 242, 0.4) 0%, rgba(250, 250, 250, 0.08) 100%);
+  border-radius: 0px 0px 32px 32px;
+  border: 1px solid #0089F2;
+}
+
+.songs-card__block-pick {
+  cursor: pointer;
+  position: relative;
+}
+
+.songs-card__block-pick:hover .button-block {
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+}
+
+.songs-card__title {
+  margin: 0 0 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 140%;
+}
+
+.songs-card__subtitle {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140%;
+}
+
+.songs-card__player {
+  display: -ms-grid;
+  display: grid;
+  min-width: 387px;
+  position: absolute;
+  top: 0;
+  right: -387px;
+  background: linear-gradient(126.51deg, rgba(0, 0, 136, 0.3) 0%, rgba(0, 137, 242, 0.3) 0.01%, rgba(0, 137, 242, 0.1) 100%);
+  border-radius: 0px 32px 32px 0px;
+  z-index: 2;
+  min-height: 314px;
+  padding: 46px 12px 63px 14px;
+}
+
+.button-block {
+  display: none;
+  position: absolute;
+  inset: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 137, 242, 0)), color-stop(31.18%, rgba(0, 137, 242, 0.2)), to(rgba(0, 137, 242, 0.2)));
+  background: linear-gradient(180deg, rgba(0, 137, 242, 0) 0%, rgba(0, 137, 242, 0.2) 31.18%, rgba(0, 137, 242, 0.2) 100%);
+}
+
+.player-block {
+  background: linear-gradient(92.98deg, rgba(240, 250, 255, 0.35) 0%, rgba(240, 250, 255, 0.2) 100%);
+  -webkit-box-shadow: -4px 8px 56px rgba(0, 0, 0, 0.1);
+          box-shadow: -4px 8px 56px rgba(0, 0, 0, 0.1);
+  -webkit-backdrop-filter: blur(7.5px);
+          backdrop-filter: blur(7.5px);
+  border-radius: 16px;
+  margin: 0 0 18px;
 }
 
 .section-title {
