add new changes

--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -3,8 +3,6 @@
     border-radius: 56px
     border: none
     cursor: pointer
-    
-    
 
     font-weight: 600
     font-size: 16px
@@ -36,10 +34,11 @@
         text-decoration: none
         font-weight: 500
         font-size: 20px
-        line-height: 24px
         height: fit-content
+        text-align: center
+        color: $black
 
-        &-dowload
+        &-download
             padding: 0 140px
             margin: 0 0 26px
         &-text
