--- a/style/index.css
+++ b/style/index.css
@@ -1,13 +1,10 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 *::before, *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -23,7 +20,7 @@ img {
 
 .container {
   max-width: 1300px;
-  width: calc( 100% - 20px);
+  width: calc(100% - 20px);
   margin: 0 auto;
 }
 
@@ -37,25 +34,19 @@ header {
 }
 
 .header-block {
-  display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
   padding: 32px 0;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .nav-list {
-  display: -ms-grid;
   display: grid;
   grid-auto-columns: -webkit-max-content;
   grid-auto-columns: max-content;
   grid-auto-flow: column;
   width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 40px;
 }
 
@@ -72,16 +63,13 @@ header {
   font-size: 16px;
   line-height: 43px;
   color: #00264D;
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-
 .btn__header {
   padding: 0 24px;
   display: block;
   text-decoration: none;
 }
-
 .btn__hero {
   padding: 0 87px;
   text-decoration: none;
@@ -90,7 +78,6 @@ header {
   width: -moz-fit-content;
   width: fit-content;
 }
-
 .btn__news {
   padding: 0 19px;
   display: block;
@@ -101,54 +88,43 @@ header {
   font-size: 14px;
   font-weight: 400;
 }
-
 .btn__listen {
   padding: 0 55px;
 }
-
 .btn__player {
   display: block;
   text-decoration: none;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  text-align: center;
+  color: #030E22;
 }
-
-.btn__player-dowload {
+.btn__player-download {
   padding: 0 140px;
   margin: 0 0 26px;
 }
-
 .btn__player-text {
   padding: 0 53px;
 }
-
 .btn:hover {
   background: #0089F2;
   color: #F0FAFF;
 }
 
 .hero {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 640px 1fr;
-      grid-template-columns: 640px 1fr;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  grid-template-columns: 640px 1fr;
+  justify-content: space-between;
   gap: 20px;
   margin: 0 0 80px;
 }
-
 .hero-info {
   padding: 30px 10px 30px 0;
 }
-
 .hero-info__text {
-  display: -ms-grid;
   display: grid;
   gap: 30px;
   font-weight: 500;
@@ -159,7 +135,6 @@ header {
   margin: 0 0 161px;
   color: #00264D;
 }
-
 .hero-info__title {
   font-weight: 500;
   font-size: 64px;
@@ -167,7 +142,6 @@ header {
   letter-spacing: -0.02em;
   margin: 0 0 92px;
 }
-
 .hero-info__title h1 {
   font-weight: inherit;
   font-size: inherit;
@@ -176,35 +150,25 @@ header {
 .last-news {
   margin: 0 0 85px;
 }
-
 .last-news .section-title {
   margin: 0 0 20px;
 }
-
 .last-news__controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin: 0 0 27px;
 }
-
 .last-news__controls-btns {
-  display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
   gap: 24px;
 }
-
 .last-news__prev, .last-news__next {
   border-radius: 50%;
   border: none;
   cursor: pointer;
   background: transparent;
 }
-
 .last-news__body {
   max-width: 213px;
   min-height: 234px;
@@ -217,24 +181,20 @@ header {
   min-height: 234px;
   color: #fff;
   position: relative;
-  display: -ms-grid;
   display: grid;
   place-content: end;
   padding: 22px 19px;
 }
-
 .news-card__img {
   border-radius: 20px;
   z-index: -1;
   position: absolute;
 }
-
 .news-card__title {
   font-weight: 400;
   font-size: 24px;
   line-height: 120%;
 }
-
 .news-card__date {
   font-weight: 400;
   font-size: 10px;
@@ -244,34 +204,25 @@ header {
 .last-video {
   margin: 0 0 80px;
 }
-
 .last-video .section-title {
   margin: 0 0 20px;
 }
-
 .last-video__body {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
 .socials-block {
   margin: 0 0 100px;
 }
-
 .socials-block .section-title {
   margin: 0 0 20px;
 }
-
 .socials-block__body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 54px;
 }
-
 .socials-block__text {
   max-width: 533px;
   font-weight: 500;
@@ -282,46 +233,27 @@ header {
 .footer {
   border-top: 4px solid rgba(0, 38, 77, 0.06);
 }
-
 .footer__body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: 26px 0;
 }
-
 .footer__social {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 58px;
 }
-
 .footer__copy {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 11px;
 }
-
 .footer__copy-text {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
 }
-
 .footer__copy-text b {
   margin: 7px 0 0;
 }
@@ -329,54 +261,41 @@ header {
 .songs .section-title {
   margin: 0 0 40px;
 }
-
 .songs-body {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(258px, 1fr))[4];
-      grid-template-columns: repeat(4, minmax(258px, 1fr));
+  grid-template-columns: repeat(4, minmax(258px, 1fr));
   gap: 20px 91px;
 }
-
 .songs-card {
   border-radius: 16px 16px 0 0;
   position: relative;
 }
-
 .songs-card__descr {
   padding: 12px 32px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 137, 242, 0.4)), to(rgba(250, 250, 250, 0.08)));
   background: linear-gradient(180deg, rgba(0, 137, 242, 0.4) 0%, rgba(250, 250, 250, 0.08) 100%);
   border-radius: 0px 0px 32px 32px;
   border: 1px solid #0089F2;
 }
-
 .songs-card__block-pick {
   cursor: pointer;
   position: relative;
 }
-
 .songs-card__block-pick:hover .button-block {
-  display: -ms-grid;
   display: grid;
   place-content: center;
 }
-
 .songs-card__title {
   margin: 0 0 4px;
   font-weight: 700;
   font-size: 16px;
   line-height: 140%;
 }
-
 .songs-card__subtitle {
   font-weight: 400;
   font-size: 14px;
   line-height: 140%;
 }
-
 .songs-card__player {
-  display: -ms-grid;
   display: grid;
   min-width: 387px;
   position: absolute;
@@ -393,18 +312,37 @@ header {
   display: none;
   position: absolute;
   inset: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 137, 242, 0)), color-stop(31.18%, rgba(0, 137, 242, 0.2)), to(rgba(0, 137, 242, 0.2)));
   background: linear-gradient(180deg, rgba(0, 137, 242, 0) 0%, rgba(0, 137, 242, 0.2) 31.18%, rgba(0, 137, 242, 0.2) 100%);
 }
 
 .player-block {
   background: linear-gradient(92.98deg, rgba(240, 250, 255, 0.35) 0%, rgba(240, 250, 255, 0.2) 100%);
-  -webkit-box-shadow: -4px 8px 56px rgba(0, 0, 0, 0.1);
-          box-shadow: -4px 8px 56px rgba(0, 0, 0, 0.1);
+  box-shadow: -4px 8px 56px rgba(0, 0, 0, 0.1);
   -webkit-backdrop-filter: blur(7.5px);
           backdrop-filter: blur(7.5px);
   border-radius: 16px;
   margin: 0 0 18px;
+}
+.player-block .line {
+  width: 100%;
+  background: #0089F2;
+  height: 4px;
+}
+
+.player-body {
+  display: grid;
+  grid-template-columns: 13px 1fr 43px;
+  align-items: center;
+  height: 100%;
+  padding: 16px 17px 16px 32px;
+}
+.player-body__time-line {
+  margin: 0 34px;
+}
+.player-body__volume, .player-body__play {
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .section-title {
