finish player on songs

--- a/sass/_sounds.sass
+++ b/sass/_sounds.sass
@@ -1,4 +1,5 @@
 .songs
+    margin: 0 0 80px
     .section-title
         margin:  0 0 40px
     &-body
@@ -56,6 +57,10 @@
     backdrop-filter: blur(7.5px)
     border-radius: 16px
     margin: 0 0 18px
+
+
+    audio
+        display: none
 
     .line
         width: 100%
