--- a/sass/_sounds.sass
+++ b/sass/_sounds.sass
@@ -63,9 +63,9 @@
         display: none
 
     .line
-        width: 100%
         background: $blue
         height: 4px
+        border-radius: 5px
 
 .player-body
     display: grid
@@ -77,6 +77,7 @@
 
     &__time-line
         margin: 0 34px
+        cursor: pointer
 
     &__volume, &__play
         background: transparent
