finish accrods page, start galery page

--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -76,3 +76,8 @@
             
             &::after
                 background: linear-gradient(90deg, #40B2FF 0%, #0069BF 100%)
+
+        &_more
+            max-width: 400px
+            width: 100%
+            margin: 0 auto
