--- a/sass/index.sass
+++ b/sass/index.sass
@@ -25,12 +25,7 @@ img
 .hide
     display: none !important
 
-@import header
-@import button
-@import hero
-@import footer
-@import sounds
-@import accords
+@import header, button, hero, footer, sounds, accords, galary
 
 
 .section-title
