--- a/sass/_accords.sass
+++ b/sass/_accords.sass
@@ -1,4 +1,5 @@
 .accords
+    margin: 0 0 80px
     .section-title
         margin: 0 0 40px
     &-nav
@@ -11,16 +12,21 @@
         min-width: 310px
         grid-row: 1 / span 2
 
+
     &__body
         display: grid
         grid-template-columns: repeat(auto-fit, minmax(630px, auto))
         gap: 50px 20px
+        margin: 0 0 117px
 .accord
     display: grid
     row-gap: 9px
     padding: 10px 67.5px 50px 67.5px
     background: linear-gradient(120.41deg, rgba(0, 137, 242, 0.35) 0%, rgba(166, 221, 255, 0.1) 100%)
     
+
+    &:nth-of-type(1), &:nth-of-type(2)
+        transform: translateX(-15rem)
     
     &__title
         *
