--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -81,3 +81,9 @@
             max-width: 400px
             width: 100%
             margin: 0 auto
+
+    &__galery
+        width: fit-content
+        margin: 0 auto
+        padding: 0 91px
+        margin-top: 20px
