--- a/sass/_galary.sass
+++ b/sass/_galary.sass
@@ -1,4 +1,5 @@
 .galery
+    margin: 0 0 80px
     .section-title
         margin: 0 0 40px
     &-new
@@ -49,25 +50,58 @@
             border-radius: 10px
 
     &-news
+        margin: 0 0 97px
         &__body
             display: grid
             gap: 20px
-            grid-auto-rows: 562px
+            
             
         &__row
-            display: flex
+            display: grid
             column-gap: 20px
-            flex-wrap: wrap
+            grid-template-columns: 1fr 430px
+            grid-auto-rows: 562px
+
 
             &:nth-of-type(even)
-                flex-direction: row-reverse
+                grid-template-columns: 430px 1fr
                 
         &__block
+            position: relative
+            color: $white
+            text-decoration: none
+            display: grid
             
-            &_large
-                flex-basis: 844px
-            &_small
-                flex-basis: 430px
+
+            &:hover
+                .galery-news__text
+                    display: grid
+            
 
         &__img
-            //width: 100%
+            position: absolute
+            inset: 0
+            width: 100%
+            height: 100%
+            object-fit: cover
+            z-index: -1
+
+        &__text
+            display: none
+            width: 100%
+            height: 100%
+            background: linear-gradient(180deg, rgba(0, 38, 77, 0) 0%, #00264D 100%)
+            position: relative
+            padding: 30px 80px
+            grid-auto-rows: max-content
+            gap: 8px
+            align-content: end
+
+    &-new-video
+
+        &__body
+            display: grid
+            grid-template-columns: repeat(4, minmax(310px, 1fr))
+            gap: 20px
+
+            
