finish desctop dev

--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -87,3 +87,11 @@
         margin: 0 auto
         padding: 0 91px
         margin-top: 20px
+
+    &__form
+        border: 2px solid $blue
+        border-radius: 15px
+        background: $no-bg
+        padding: 0 52px
+
+        margin: 0 auto 106px
