--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -19,3 +19,18 @@ header
 .nav-block
     &__link
         text-decoration: $none
+        font-weight: 500
+        font-size: 16px
+        line-height: 120%
+        color: rgba(0, 38, 77, 0.92)
+        transition: $anim500
+
+        &_active
+            text-decoration-line: underline
+            color: rgba(0, 0, 0, 0.92)
+
+        &:not(&_active):hover
+            text-decoration-line: underline
+            color: rgba(0, 0, 0, 0.92)
+             
+            
