--- a/sass/_hero.sass
+++ b/sass/_hero.sass
@@ -55,6 +55,7 @@
     &__body
         max-width: 213px
         min-height: 234px
+        text-decoration: none
 
 .news-card
     background: linear-gradient(179.89deg, rgba(0, 0, 0, 0) 0.1%, rgba(15, 18, 19, 0.85) 80.67%)
