--- a/sass/index.sass
+++ b/sass/index.sass
@@ -28,6 +28,9 @@ img
 .hide
     display: none !important
 
+.grid
+    display: grid !important
+
 .typo
     color: $black
     p
@@ -41,7 +44,7 @@ img
         height: 334px
         width: 100%
 
-@import header, button, hero, footer, sounds, accords, galary, contacts, news-template
+@import header, button, hero, footer, sounds, accords, galary, contacts, news-template, media
 
 
 .section-title
