--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -15,6 +15,10 @@ header
     width: 100%
     align-items: center
     gap: 40px
+
+    &_mob
+        display: none
+        z-index: 10000
     
 .nav-block
     &__link
