--- a/sass/_galary.sass
+++ b/sass/_galary.sass
@@ -6,10 +6,10 @@
         margin: 0 0 59px
         &__list
             list-style: none
-            display: grid
-            gap: 26px
-            grid-template-columns: repeat(5, 1fr)
-            grid-auto-rows: minmax(312px, 1fr)
+            // display: grid
+            // gap: 26px
+            // grid-template-columns: repeat(5, 1fr)
+            // grid-auto-rows: minmax(312px, 1fr)
         &__block
             position: relative
             padding: 8px
@@ -18,6 +18,7 @@
             z-index: 2
             text-decoration: none
             color: inherit
+            min-height: 312px
             
 
             &::before
