--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -48,6 +48,9 @@
             font-size: 14px
             margin: 0 16px 7px 0
 
+        &__form
+            margin: 0 0 40px
+
     .hero
         grid-template-columns: 1fr
 
@@ -125,6 +128,64 @@
                 font-size: 36px
         &__text
             font-size: 14px
-            
 
-                
+    .galery
+        &-new
+            &__body
+                height: 312px
+        &-news
+            &__row
+                grid-template-columns: 1fr
+                row-gap: 20px
+
+                &:nth-of-type(even)
+                    grid-template-columns: 1fr
+                    
+            
+            &__text
+                display: grid
+
+        &-new-video
+            &__body
+                grid-template-columns: 1fr
+
+    .contact
+        .section-title
+            font-size: 40px
+            line-height: 130%
+            margin: 0 0 40px
+        &-text
+            font-size: 36px
+            &__subtitle
+                font-size: 20px
+        &-how
+            font-size: 28px
+        &-form
+            padding: 10px
+
+            &__social
+                &-text
+                    display: none
+                &-list
+                    margin: 0 auto
+    .form
+        &-title
+            font-size: 30px
+        &-block
+            width: 100%
+
+    .news-template
+        &__header
+            background-position: center !important
+
+            &-text
+                margin: 0 auto
+                text-align: center
+    .article
+        grid-template-columns: 1fr
+        gap: 23px
+        &-data
+            grid-row: auto
+
+        &-img
+            grid-template-columns: 1fr
