--- a/style/index.css
+++ b/style/index.css
@@ -519,10 +519,6 @@ header {
 }
 .galery-new__list {
   list-style: none;
-  display: grid;
-  gap: 26px;
-  grid-template-columns: repeat(5, 1fr);
-  grid-auto-rows: minmax(312px, 1fr);
 }
 .galery-new__block {
   position: relative;
@@ -532,6 +528,7 @@ header {
   z-index: 2;
   text-decoration: none;
   color: inherit;
+  min-height: 312px;
 }
 .galery-new__block::before {
   content: "";
@@ -843,6 +840,9 @@ header {
     font-size: 14px;
     margin: 0 16px 7px 0;
   }
+  .btn__form {
+    margin: 0 0 40px;
+  }
   .hero {
     grid-template-columns: 1fr;
   }
@@ -921,6 +921,68 @@ header {
   }
   .accord__text {
     font-size: 14px;
+  }
+  .galery-new__body {
+    height: 312px;
+  }
+  .galery-news__row {
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+  }
+  .galery-news__row:nth-of-type(even) {
+    grid-template-columns: 1fr;
+  }
+  .galery-news__text {
+    display: grid;
+  }
+  .galery-new-video__body {
+    grid-template-columns: 1fr;
+  }
+  .contact .section-title {
+    font-size: 40px;
+    line-height: 130%;
+    margin: 0 0 40px;
+  }
+  .contact-text {
+    font-size: 36px;
+  }
+  .contact-text__subtitle {
+    font-size: 20px;
+  }
+  .contact-how {
+    font-size: 28px;
+  }
+  .contact-form {
+    padding: 10px;
+  }
+  .contact-form__social-text {
+    display: none;
+  }
+  .contact-form__social-list {
+    margin: 0 auto;
+  }
+  .form-title {
+    font-size: 30px;
+  }
+  .form-block {
+    width: 100%;
+  }
+  .news-template__header {
+    background-position: center !important;
+  }
+  .news-template__header-text {
+    margin: 0 auto;
+    text-align: center;
+  }
+  .article {
+    grid-template-columns: 1fr;
+    gap: 23px;
+  }
+  .article-data {
+    grid-row: auto;
+  }
+  .article-img {
+    grid-template-columns: 1fr;
   }
 }
 .section-title {
