--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -162,6 +162,7 @@
             font-size: 28px
         &-form
             padding: 10px
+            width: 100%
 
             &__social
                 &-text
