--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -103,6 +103,10 @@
                 inset: 0
                 min-width: 100%
                 border-radius: 20px
+
+            .button-block
+                display: grid
+                place-content: center
     
     .accords
         &-nav
