--- a/style/index.css
+++ b/style/index.css
@@ -369,6 +369,18 @@ header {
   margin: 7px 0 0;
 }
 
+.hide-sound {
+  display: none !important;
+}
+
+.songs-border-16 {
+  border-radius: 16px 0 0 0 !important;
+}
+
+.songs-border-32 {
+  border-radius: 0 0 0 32px !important;
+}
+
 .songs {
   margin: 0 0 80px;
 }
@@ -378,11 +390,13 @@ header {
 .songs-body {
   display: grid;
   grid-template-columns: repeat(4, minmax(258px, 1fr));
+  grid-auto-rows: 328px;
   gap: 20px 91px;
 }
 .songs-card {
   border-radius: 16px 16px 0 0;
   position: relative;
+  display: grid;
 }
 .songs-card__descr {
   padding: 12px 32px;
@@ -415,10 +429,10 @@ header {
   position: absolute;
   top: 0;
   right: -387px;
-  background: linear-gradient(126.51deg, rgba(0, 0, 136, 0.3) 0%, rgba(0, 137, 242, 0.3) 0.01%, rgba(0, 137, 242, 0.1) 100%);
+  background: linear-gradient(126.51deg, rgba(0, 0, 136, 0.3) 0%, #0089F2 0.01%, rgba(0, 137, 242, 0.5) 100%);
   border-radius: 0px 32px 32px 0px;
   z-index: 2;
-  min-height: 314px;
+  min-height: 328px;
   padding: 46px 12px 63px 14px;
 }
 
@@ -442,7 +456,7 @@ header {
 }
 .player-block .line {
   background: #0089F2;
-  height: 4px;
+  height: 8px;
   border-radius: 5px;
 }
 
@@ -456,6 +470,8 @@ header {
 .player-body__time-line {
   margin: 0 34px;
   cursor: pointer;
+  border: 0.5px solid #fff;
+  border-radius: 5px;
 }
 .player-body__volume, .player-body__play {
   background: transparent;
@@ -896,6 +912,10 @@ header {
     inset: 0;
     min-width: 100%;
     border-radius: 20px;
+  }
+  .songs-card .button-block {
+    display: grid;
+    place-content: center;
   }
   .accords-nav {
     grid-row: auto;
